2010-10-23  Per Bothner  <per@bothner.com>

	* Format.java: Set validateApplyKey property.
	(formatToWriter, formatToOutputString): New method.
	(formatToString): Change return type to String, rather than FString,
	and swap args to make use of varargs.
	(formatToString(char,Object,Object[])): Rename to formatToFString.
	(format): Generalize to take Writer.  Use formatToWriter.
	* CompileMisc.java (validateApplyFormat): New method.  

2010-10-17  Per Bothner  <per@bothner.com>

	* DisplayFormat.java (writeObjectRaw): For readable output of #!void
	return "#!void".

2010-10-15  Per Bothner  <per@bothner.com>

	* NumberPredicate.java: New class - implements odd? and even?.
	* Makefile.am: Update accordingly.
	* CompileArith.java (validateApplyNumberPredicate): New method.

2010-10-14  Per Bothner  <per@bothner.com>

	* CompileNamedPart.java (validateSetNamedPart): Set result type to void.
	Also copy over line-number information.

	* DisplayFormat.java (writeObject): When printing XML nodes,
	only emit initial '#' if getReadableOutput().

2010-10-06  Per Bothner  <per@bothner.com>

	* MakeList.java (compile): Use getType rather than getReturnType.
	* GetModuleClass.java (compile): Likewise.
	* CompileMisc.java (getReturnType, getReturnTypeConvert): Removed.
	(validateApplyConstantFunction0): Visit 2nd argument in context
 	of type from 1st argument.

2010-10-04  Per Bothner  <per@bothner.com>

	* CompileArith.java (appropriateIntConstant, appropriateLongConstant):
	Take InlineCalls parameters, so we can simplify and use the new
	fixIntValue and fixLongValue methods - and get language-dependent types.
	(validateApplyArithOp): Update accordingly.
	(inRange): Remove methods moved elsewhere.

	* CompileNamedPart.java (GetNamedExp.validateApply): Don't prematurely
	call visitArgs.

2010-09-17  Per Bothner  <per@bothner.com>

	* CompilationHelpers.java (validateApplyToArgs): Add setLine calls.

2010-09-16  Per Bothner  <per@bothner.com>
